tests/snapshots/deserializer__number_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Number(-1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {0: NumberObject(-1.0)}

