tests/snapshots/deserializer__number_primitive_infinity_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Number(-Infinity)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        -inf,
    ),
}

