tests/snapshots/deserializer__number_primitive_min.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Number(5e-324)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        5e-324,
    ),
}

