tests/snapshots/deserializer__number_primitive_nan.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Number(NaN)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        NaN,
    ),
}

